--- a/playbooks/09-create-ec2.yml
+++ b/playbooks/09-create-ec2.yml
@@ -6,11 +6,13 @@
         instance_type: t2.micro
         image: ami-0b25f6ba2f4419235
         region: eu-west-2
-        count: 1
+        #count: 1
+        exact_count: 2
+        count_tag: { type: http }
         vpc_subnet_id: subnet-0ab30df0d626c6175
         assign_public_ip: yes
         group: ["http_server_sg"]
-        instance_tags: {type: http, Environment: QA}
+        instance_tags: { type: http, Environment: QA }
         wait: yes
       register: ec2_output
     - debug: var=ec2_output
